fixed pop/up not showing

--- a/src/components/GameBoard/GameBoard.css
+++ b/src/components/GameBoard/GameBoard.css
@@ -132,6 +132,7 @@
   
   .popup-button {
     padding: 10px;
+    margin: 10px;
     background: #1e40af;
     color: white;
     border: none;
